# ghostseal

./: LICENSE  README.md  pyproject.toml
src/ghostseal/: __init__.py  client.py  envelope.py
tests/: test_client.py  test_envelope.py
